# quickformat

./: install.sh  main.py  pyproject.toml  quickformat.spec
src/format/: __init__.py  finder.py  formater.py  model_settings.py
src/quickformat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/input/: test.md
