[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quickformat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.24.0",
    "prompt-toolkit>=3.0.52",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
[tool.setuptools]
packages = ["format"]
package-dir = {"" = "src"}

